# slime-mold-simulation

./: .envrc  .gitignore  LICENSE  README.md  Trunk.toml  flake.nix  justfile  rustfmt.toml
book/: book.toml  wgsl.min.js
book/src/: 2010_research_paper.md  SUMMARY.md  WebGPU.md  agents_bounce.md  agents_deposit.md  agents_initialization.md  agents_move.md  agents_rotate.md  agents_sense.md  architecture.md  booleans.md  compile_time_guarantees.md  compute_shader_threads.md  compute_shaders.md  controlling_parameters.md  decay.md  diffuse.md  drumroll.md  final_fragment_shader.md  fragment_shader.md  frontend_deciding_factor.md  frontend_frameworks.md  full_screen_quad.md  full_screen_quad_impl.md  game_engines.md  glossary.md  gpu_interfacing.md  gpu_workgroups.md  implementation.md  ipc.md  jeff_jones.md  michael_fogleman.md  model.md  physarum_polycephalum.md  physarum_polycephalum_intelligence.md  physarum_polycephalum_video.md  research.md  rust_graphics.md  sage_jensen.md  scaling_up.md  (+14 more)
book/src/images/: workspace_parameter_modification.excalidraw
book/src/videos/: Tokyo rail network designed by Physarum plasmodium [BZUQQmcR5-g].webm
book/theme/: highlight.js
crates/common/: Cargo.toml
crates/common/src/: lib.rs  simulation.rs
crates/frontend/: Cargo.toml  index.html
crates/frontend/src/: context.rs  lib.rs
crates/frontend/src/components/: error.rs  index.rs  initial_circle_radius.rs  initial_heading.rs  mod.rs  number_of_active_agents.rs  shader_parameters.rs  slider_control.rs
crates/frontend/src/components/error/: error_component.rs  error_provider.rs
crates/frontend/src/pages/: presentation.rs
crates/frontend/src/pages/presentation/: particle_model.rs  triangles.rs
crates/frontend/src/services/: websocket.rs
crates/frontend/static/: styles.scss
crates/frontend/static/patternfly/: style.scss
crates/simulation/: Cargo.toml  shaders.wgsl
crates/simulation/src/: cli.rs  main.rs  resolution.rs
