[package]
authors = ["Asger Juul Brunshøj <asgerbrunshoj@gmail.com>"]
edition = "2021"
name = "frontend"
publish = false
version = "0.1.0"

[lints.rust]
future_incompatible = "deny"
nonstandard_style = "deny"
rust_2018_idioms = "deny"

[lints.clippy]
mod_module_files = "deny"

[dependencies]
common.path = "../common"
futures = "0.3"
gloo-utils = "0.2"
js-sys = "0.3.68"
log = "0.4"
patternfly-yew = { version = "0.5.6", features = ["icons-far", "icons-fab"] }
serde = { version = "1", features = ["derive"] }
wasm-bindgen = "0.2.91"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
web-sys = "0.3"
yew = { features = ["csr"], version = "0.21" }
yew-hooks = "0.3"
yew-nested-router = "0.6.1"
